# wmt26-task3

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: ablation_ensemble.md  analysis_notes.md  bootstrap_ensemble_chunked_min.md  task_facts.md  truncation_cometkiwi_chunked.md
paper/: main.tex  refs.bib
scripts/: download_dev.sh
src/: analyze.py  calibrate.py  common.py  data.py  ensemble.py  score.py  submit.py
tests/: test_calibrate.py  test_chunking.py  test_convert.py  test_smoke.py  test_submit.py
