[project]
name = "wmt26-task3"
version = "0.1.0"
description = "WMT 2026 Shared Task on Automated Translation Quality Evaluation — Task 3 (error-free segment detection) system"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
